Closed
Bug 18477
Opened 26 years ago
Closed 24 years ago
[IMG] max-height problem on image with display block and height auto
Categories
(Core :: Layout, defect, P2)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla0.9.7
People
(Reporter: dbaron, Assigned: dbaron)
References
()
Details
(Keywords: css2, testcase, Whiteboard: [Hixie-P2][Hixie-1.0])
Attachments
(4 files)
|
319 bytes,
text/html
|
Details | |
|
500 bytes,
text/html
|
Details | |
|
670 bytes,
text/html
|
Details | |
|
5.85 KB,
patch
|
pavlov
:
review+
attinasi
:
superreview+
|
Details | Diff | Splinter Review |
DESCRIPTION: The image with class eleven in the above page is displayed with a
height of 600px, when it should be its natural size.
The problem is that when an image with display: block is between its max-height
and min-height, so neither property should do anything, it's getting its
max-height as its height.
STEPS TO REPRODUCE:
* load attached testcase
ACTUAL RESULTS:
* the image is 800px tall
EXPECTED RESULTS:
* the image should be about 300px tall
DOES NOT WORK CORRECTLY ON:
* Linux, apprunner, 1999-11-09-08-M11
| Assignee | ||
Comment 1•26 years ago
|
||
Why are you re-reassing layout bugs? Do NOT touch layout bugs.
The bugs are assigned to Kipp so they can stay neatly organized until we have a
new owner for the block/inline code.
mass moving all Kipp's pre-beta bugs to M15. Nisheeth and I will
prioritize these and selectively move high-priority bugs into M13 and M14.
Summary: max-height problem on image with display block → [IMG] max-height problem on image with display block
redistributing bugs across future milestones, sorry for the spam
Target Milestone: M20 → M22
This bug has been marked "future" because the original netscape engineer working
on this is over-burdened. If you feel this is an error, that you or another
known resource will be working on this bug,or if it blocks your work in some way
-- please attach your concern to the bug for reconsideration.
Status: NEW → ASSIGNED
Target Milestone: M22 → Future
Comment 10•25 years ago
|
||
Comment 11•25 years ago
|
||
It appears that this now works. However, we should test it again once the
height:% bug is fixed. Also, I tested it on Win2K, David originally reported
the bug on Linux.
Whiteboard: WORKSFORME?
Comment 12•25 years ago
|
||
(actually, just for the record, the testcase I attached did not get around a bug
in our strict DTD, it fixed a bug in the original testcase.)
| Assignee | ||
Comment 13•25 years ago
|
||
Percentage widths on images are completely broken right now. Don't mark this
WORKSFORME until that is fixed...
Updated•25 years ago
|
QA Contact: petersen → chrisd
Comment 14•25 years ago
|
||
Netscape's standard compliance QA team reorganised itself once again, so taking
remaining non-tables style bugs. Sorry about the spam. I tried to get this done
directly at the database level, but apparently that is "not easy because of the
shadow db", "plus it screws up the audit trail", so no can do...
QA Contact: chrisd → ian
Comment 15•24 years ago
|
||
There is still a bug here. I shall attach a testcase. It seems to only occur when
the 'height' property is set to 'auto'.
Comment 16•24 years ago
|
||
Comment 17•24 years ago
|
||
odd: the testcase that Ian most recently added renders identically in todays
build and in IE6.
Setting to P:2, Normal, mozilla 1.0
Priority: P3 → P2
Target Milestone: Future → mozilla1.0
Comment 18•24 years ago
|
||
Nothing odd about it, that would just imply IE6 is broken too ;-)
Updated•24 years ago
|
Blocks: autoresize
Comment 19•24 years ago
|
||
So, will this bug magically fix itself in a couple of months, when it is two
years old :) That would be cool, heh heh heh.
Status: NEW → ASSIGNED
Comment 20•24 years ago
|
||
Does that often happen to your bugs? If so, remind me to assign some to you just
before they turn 2 years old ;-)
Comment 21•24 years ago
|
||
Could we get a fix for this before the end of mozilla098? It blocks
implementation of a P2 feature on our PRD, part of a theme for MachV.
Keywords: mozilla0.9.8
Updated•24 years ago
|
Target Milestone: mozilla1.0 → mozilla1.2
Comment 22•24 years ago
|
||
Marc, is there any way you can get some time allocated for fixing this? Being
able to use this would suck less than a javascript based solution for automatic
image sizing (see my last comment in bug 73322).
| Assignee | ||
Comment 23•24 years ago
|
||
So pavlov broke min-height and max-height even more than it was broken when Ian
reopened the bug. But I have a fix...
| Assignee | ||
Comment 24•24 years ago
|
||
| Assignee | ||
Comment 25•24 years ago
|
||
Taking
Assignee: attinasi → dbaron
Status: ASSIGNED → NEW
Target Milestone: mozilla1.2 → mozilla0.9.7
| Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Comment 26•24 years ago
|
||
Comment on attachment 60906 [details] [diff] [review]
patch
r=pavlov
Attachment #60906 -
Flags: review+
Comment 27•24 years ago
|
||
Comment on attachment 60906 [details] [diff] [review]
patch
sr=attinasi
Attachment #60906 -
Flags: superreview+
Comment 28•24 years ago
|
||
dbaron landed the fix on 12/10/2001 19:21
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 29•24 years ago
|
||
Hixie, in attachment 50145 [details] you say that "this should be after the image, not
under it". Is that correct, and if so, is that this bug or another one?
| Assignee | ||
Comment 30•21 years ago
|
||
See also bug 234686 for further refinements.
You need to log in
before you can comment on or make changes to this bug.
Description
•