Fix implementation of {min,max}-{width,height} on images.  b=18477  r=pavlov  sr=attinasi